--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,6 +30,147 @@
        <attribute name="title">
         <string> 客户管理</string>
        </attribute>
+       <widget class="QLabel" name="cname_label">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>30</y>
+          <width>70</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string> 客户名称：</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="ctype_label">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>70</y>
+          <width>70</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string> 客户类型：</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="cthone_label">
+        <property name="geometry">
+         <rect>
+          <x>300</x>
+          <y>30</y>
+          <width>50</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>电话：</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="address_label">
+        <property name="geometry">
+         <rect>
+          <x>300</x>
+          <y>60</y>
+          <width>50</width>
+          <height>12</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string> 地址：</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_cname">
+        <property name="geometry">
+         <rect>
+          <x>85</x>
+          <y>30</y>
+          <width>200</width>
+          <height>20</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_cpthone">
+        <property name="geometry">
+         <rect>
+          <x>340</x>
+          <y>30</y>
+          <width>300</width>
+          <height>20</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QTextEdit" name="textEdit_caddress">
+        <property name="geometry">
+         <rect>
+          <x>340</x>
+          <y>60</y>
+          <width>300</width>
+          <height>60</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="createcusBtn">
+        <property name="geometry">
+         <rect>
+          <x>70</x>
+          <y>150</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string> 新建客户</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="searchCusBtn">
+        <property name="geometry">
+         <rect>
+          <x>280</x>
+          <y>150</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string> 搜索</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="inportCusBtn">
+        <property name="geometry">
+         <rect>
+          <x>470</x>
+          <y>150</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string> 导入客户</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="comboBox_ctype">
+        <property name="geometry">
+         <rect>
+          <x>85</x>
+          <y>70</y>
+          <width>200</width>
+          <height>20</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QTableView" name="tableView">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>230</y>
+          <width>751</width>
+          <height>301</height>
+         </rect>
+        </property>
+       </widget>
       </widget>
       <widget class="QWidget" name="tabSupplier">
        <attribute name="title">
