--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -171,6 +171,32 @@
          </rect>
         </property>
        </widget>
+       <widget class="QGroupBox" name="groupBox">
+        <property name="geometry">
+         <rect>
+          <x>9</x>
+          <y>9</y>
+          <width>761</width>
+          <height>181</height>
+         </rect>
+        </property>
+        <property name="title">
+         <string> 客户管理</string>
+        </property>
+       </widget>
+       <widget class="QGroupBox" name="groupBox_2">
+        <property name="geometry">
+         <rect>
+          <x>9</x>
+          <y>209</y>
+          <width>770</width>
+          <height>330</height>
+         </rect>
+        </property>
+        <property name="title">
+         <string> 客户显示</string>
+        </property>
+       </widget>
       </widget>
       <widget class="QWidget" name="tabSupplier">
        <attribute name="title">
